build.gradle changes

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://jitpack.io' }
 }
 
 node {
@@ -77,6 +78,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.github.masecla22:Reddit4J:master-SNAPSHOT'
 }
 
 tasks.named('test') {
