--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+//	jcenter()
 	maven { url 'https://jitpack.io' }
 }
 
@@ -79,10 +80,12 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'com.github.masecla22:Reddit4J:master-SNAPSHOT'
+//	implementation 'com.github.masecla22:Reddit4J:master-SNAPSHOT'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
+//	compile "net.dean.jraw:JRAW:$jrawVersion"
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 }
 
 test {
